# scicd

./: .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .pylintrc  LICENSE  Makefile  README.md  dag.dot  mkdocs.yml  pyproject.toml  requirements.txt  scicd.yaml  scicd_executors.py  setup.py  test_expand.py
.scicd/: executors.py
MagicMock/mock.remote.get_root()/140017188021696/leaf_0/.luigi_fingerprints/: done.txt.fingerprint
docs/: getting-started.md  index.md  roadmap.md
docs/developer/: testing.md
docs/reference/: architecture.md
docs/user-guide/: build.md  cli.md  configuration.md  tasks.md
examples/: .gitlab-ci.yml  scicd.yaml
examples/assets/: dag.dot
examples/ci/: pipeline.yml
examples/ci/child/: Hello.yml  Independent.yml  IndependentStill.yml  PubsubExample.yml  ScriptTest.yml
examples/config/: variable.yml.j2
examples/luigi_examples/concurrency/: .gitlab-ci.yml  README.md  scicd.yaml  workflow.py
examples/luigi_examples/kubernetes/: .gitlab-ci.yml  README.md  scicd.yaml  scicd_executors.py  workflow.py
examples/luigi_examples/multi/: .gitlab-ci.yml  README.md  scicd.yaml  scicd_executors.py  workflow.py
examples/luigi_examples/simple/: .gitlab-ci.yml  README.md  scicd.yaml  scicd_executors.py  workflow.py
examples/make_examples/complex/: Makefile
examples/make_examples/simple/: .gitlab-ci.yml  Makefile  README.md  scicd.yaml
examples/module/: Hello.yml.j2  Independent.yml.j2  IndependentStill.yml.j2  PubsubExample.yml.j2  ScriptTest.yml.j2
examples/script/: install_deps.sh  install_deps_offline.sh
examples/src/: __init__.py  example.py
scicd/: __init__.py  adapter.py  biject.py  build.py  cli.py  config.py  dag.py  executor.py  fifo.py  generate_ci.py  git.py  gitlab.py  lint.py  manager.py  module.py  node.py  paths.py  queue.py  remote.py  runner.py  slice.py  task.py  yamler.py
scicd/backend/: dot.py  export.py  gitlab.py  run.py
scicd/backend/gitlab/: decode.py  pipeline.py
scicd/frontend/: luigi.py  make.py
scicd/frontend/luigi/: encode.py  run.py  task.py
scicd/resources/: defaults.yaml
tests/: .gitlab-ci.yml  test_adapter.py  test_child_inheritance.py  test_cli_normalization.py  test_config.py  test_config_discovery.py  test_dag.py  test_dynamic_model.py  test_env_expansion.py  test_executor_discovery.py  test_executor_strict.py  test_fingerprint_determinism.py  test_gitlab.py  test_https_sync.py  test_luigi.py  test_overrides.py  test_remote.py  test_task.py  test_yamler.py
tests/luigi/: simple.py  simple.yaml  test_luigi.py  test_simple.py
utils/: cascade.py  ci_tasks.py  pipeline.py  pubsub.py  remote.py  task.py
(+11 files in other folders)
