[tool.mypy]
disable_error_code = ["import-untyped"]

[build-system]
requires = ["uv_build >= 0.11.3, <0.12"]
build-backend = "uv_build"

[project]
name = "scicd"
version = "0.0.1"
description = "Execute scientific workflws as CI/CD pipelines"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "python-dotenv",
    "python-gitlab",
    "PyYAML",
    "cyclopts",
    "rich",
    "requests",
    "pydantic",
]
license-files = ["LICENSE"]
license = "MIT"
authors = [{ name = "Brain Interfacing Laboratory" }]
maintainers = [{ name = "Kenji Marshall", email = "kenjimar@pm.me" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3 :: Only",
    "Intended Audience :: Science/Research",
    "Typing :: Typed",
]

[project.scripts]
scicd = "scicd.cli:app"

[project.urls]
Homepage = "https://bil.stanford.edu/"
Repository = "https://github.com/bil/scicd"

[project.optional-dependencies]
luigi = [
    "luigi"
]
dev = [
    "pytest",
    "pytest-mock",
    "pre-commit",
    "luigi",
]

[tool.uv.build-backend]
module-name = "scicd"
module-root = ""


[tool.black]
target-version = ['py312']
line-length = 80

[tool.ruff]
extend-exclude = ["tests"]

[tool.ty.src]
exclude = ["tests"]
